--- a/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/View/BYTradeTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/View/BYTradeTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BYWithdrawCellID" rowHeight="85" id="KGk-i7-Jjw" customClass="BYWithdrawTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BYTradeEntryCellID" rowHeight="85" id="KGk-i7-Jjw" customClass="BYTradeTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="359" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -88,7 +88,7 @@
                 <outlet property="subTitleLabel" destination="Vip-YN-jFm" id="omH-9p-Nri"/>
                 <outlet property="suggestionImageView" destination="DdH-eM-XqS" id="hMm-mh-BjX"/>
                 <outlet property="titleLabel" destination="Kft-jx-7RX" id="hKq-6q-Gei"/>
-                <outlet property="withdrawImageView" destination="Y95-c3-TWA" id="KLM-3a-V6A"/>
+                <outlet property="tradeImageView" destination="Y95-c3-TWA" id="voq-26-WSw"/>
             </connections>
             <point key="canvasLocation" x="165.94202898550725" y="151.67410714285714"/>
         </tableViewCell>
