--- a/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/Controller/BYTradeEntryVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/Controller/BYTradeEntryVC.xib
@@ -26,12 +26,12 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <view key="tableHeaderView" contentMode="scaleToFill" id="mY0-AU-RZM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <view key="tableFooterView" contentMode="scaleToFill" id="A8u-eY-AEj">
-                        <rect key="frame" x="0.0" y="1008" width="375" height="130"/>
+                        <rect key="frame" x="0.0" y="978" width="375" height="130"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LPQ-my-Q5w" customClass="BYGradientButton">
@@ -55,6 +55,9 @@
                                         <real key="value" value="6"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="tutorialWithdrawDepositClicked:" destination="-1" eventType="touchUpInside" id="n1c-On-M6o"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P7y-Ya-Kir" customClass="BYGradientButton">
                                 <rect key="frame" x="190" y="37.5" width="170" height="70"/>
@@ -79,6 +82,9 @@
                                         <real key="value" value="6"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="tutorialSellBuyClicked:" destination="-1" eventType="touchUpInside" id="MLT-sF-rXr"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="教学视频" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4YV-eT-QA4">
                                 <rect key="frame" x="15" y="0.0" width="64" height="22.5"/>
@@ -117,7 +123,7 @@
         </view>
     </objects>
     <resources>
-        <image name="icon_play" width="50" height="48"/>
+        <image name="icon_play" width="25" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
