--- a/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/View/BYTradeTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/TradeEntryComponent/View/BYTradeTableViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hir-r1-vLt" customClass="BYGradientView">
                         <rect key="frame" x="15" y="0.0" width="329" height="70"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_YuEBao" translatesAutoresizingMaskIntoConstraints="NO" id="Y95-c3-TWA">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_withdraw_0" translatesAutoresizingMaskIntoConstraints="NO" id="Y95-c3-TWA">
                                 <rect key="frame" x="15" y="15" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="CWN-lK-qgj"/>
@@ -29,7 +29,7 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="转入余额宝" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kft-jx-7RX">
                                 <rect key="frame" x="65" y="22.5" width="90" height="25.5"/>
-                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -95,7 +95,7 @@
     </objects>
     <resources>
         <image name="Path 6" width="8" height="11"/>
-        <image name="icon_YuEBao" width="40" height="40"/>
         <image name="icon_suggetsion" width="16" height="16"/>
+        <image name="icon_withdraw_0" width="40" height="40"/>
     </resources>
 </document>
