--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HYWithdrawViewController">
             <connections>
+                <outlet property="explanationButton" destination="ttx-ZJ-u38" id="WDN-Kk-GaJ"/>
                 <outlet property="fundpwdEntryBg" destination="hRM-ja-CUf" id="rvK-5Q-ZNV"/>
                 <outlet property="sumitBtn" destination="az0-7H-f0l" id="z9F-8V-hpw"/>
                 <outlet property="tableView" destination="RxF-ga-guY" id="3Zw-aD-Kh8"/>
@@ -34,11 +35,12 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ttx-ZJ-u38">
-                            <rect key="frame" x="146.5" y="16" width="49" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title=" 说明" image="icon_rule">
-                                <color key="titleColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
-                            </state>
+                            <rect key="frame" x="146.5" y="14.5" width="49" height="21"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
+                            <state key="normal" title=" 说明" image="icon_rule"/>
+                            <connections>
+                                <action selector="explanationClicked:" destination="-1" eventType="touchUpInside" id="hYR-Om-07N"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOV-h4-A6b">
                             <rect key="frame" x="15" y="55" width="50.5" height="35"/>
@@ -46,10 +48,12 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9m7-lJ-3tP">
-                            <rect key="frame" x="329" y="58" width="70" height="32"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9m7-lJ-3tP">
+                            <rect key="frame" x="315" y="70" width="84" height="20"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                            <state key="normal" title="转入余额宝">
+                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-5" maxY="0.0"/>
+                            <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" title="转入余额宝" image="icon_transferYuEBao">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -71,7 +75,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RxF-ga-guY">
-                    <rect key="frame" x="0.0" y="170" width="414" height="449"/>
+                    <rect key="frame" x="0.0" y="170" width="414" height="594"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="O9r-N8-YYt"/>
@@ -79,7 +83,7 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="az0-7H-f0l" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="15" y="639" width="384" height="48"/>
+                    <rect key="frame" x="15" y="784" width="384" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="x9g-PL-2Ti"/>
                     </constraints>
@@ -95,7 +99,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRM-ja-CUf">
-                    <rect key="frame" x="0.0" y="687" width="414" height="30"/>
+                    <rect key="frame" x="0.0" y="832" width="414" height="30"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Nh5-Kr-QD0"/>
@@ -115,7 +119,7 @@
                 <constraint firstItem="az0-7H-f0l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="eQY-1v-ZiQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="az0-7H-f0l" secondAttribute="trailing" constant="15" id="lIe-8V-0FF"/>
                 <constraint firstItem="hRM-ja-CUf" firstAttribute="top" secondItem="az0-7H-f0l" secondAttribute="bottom" id="n3q-xy-V7a"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="175" id="qPo-gs-R0N"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="30" id="qPo-gs-R0N"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="vHy-4C-dcG"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ylB-ZC-8FU"/>
             </constraints>
@@ -124,6 +128,7 @@
     </objects>
     <resources>
         <image name="icon_rule" width="14" height="14"/>
+        <image name="icon_transferYuEBao" width="14" height="15"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
