--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -61,7 +61,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="100-hL-d4v"/>
                         <constraint firstAttribute="trailing" secondItem="9m7-lJ-3tP" secondAttribute="trailing" constant="15" id="BPw-0H-sAi"/>
@@ -75,7 +75,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RxF-ga-guY">
-                    <rect key="frame" x="0.0" y="170" width="414" height="594"/>
+                    <rect key="frame" x="0.0" y="170" width="414" height="579"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="O9r-N8-YYt"/>
@@ -83,7 +83,7 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="az0-7H-f0l" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="15" y="784" width="384" height="48"/>
+                    <rect key="frame" x="15" y="794" width="384" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="x9g-PL-2Ti"/>
                     </constraints>
@@ -99,10 +99,11 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRM-ja-CUf">
-                    <rect key="frame" x="0.0" y="832" width="414" height="30"/>
+                    <rect key="frame" x="0.0" y="749" width="414" height="30"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Nh5-Kr-QD0"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="dzl-57-vHi"/>
                     </constraints>
                 </view>
             </subviews>
@@ -110,16 +111,16 @@
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="hRM-ja-CUf" secondAttribute="trailing" id="9IZ-8f-cpT"/>
+                <constraint firstItem="az0-7H-f0l" firstAttribute="top" secondItem="hRM-ja-CUf" secondAttribute="bottom" constant="15" id="9V7-Qp-ZvU"/>
                 <constraint firstItem="hRM-ja-CUf" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="A6R-my-sIe"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Bms-LJ-jC6"/>
+                <constraint firstItem="hRM-ja-CUf" firstAttribute="top" secondItem="RxF-ga-guY" secondAttribute="bottom" id="Dmz-dd-btE"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="6" id="Ndn-h9-gWH"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="QCJ-bQ-0rx"/>
-                <constraint firstItem="az0-7H-f0l" firstAttribute="top" secondItem="RxF-ga-guY" secondAttribute="bottom" constant="20" id="YZv-DE-QAK"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="RxF-ga-guY" secondAttribute="trailing" id="cb4-Rj-ZpE"/>
                 <constraint firstItem="az0-7H-f0l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="eQY-1v-ZiQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="az0-7H-f0l" secondAttribute="trailing" constant="15" id="lIe-8V-0FF"/>
-                <constraint firstItem="hRM-ja-CUf" firstAttribute="top" secondItem="az0-7H-f0l" secondAttribute="bottom" id="n3q-xy-V7a"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="30" id="qPo-gs-R0N"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="20" id="qPo-gs-R0N"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="vHy-4C-dcG"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ylB-ZC-8FU"/>
             </constraints>
