--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawAddCardFooter.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawAddCardFooter.xib
@@ -21,7 +21,9 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgD-9J-5Eh">
                     <rect key="frame" x="15" y="10" width="345" height="116"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <state key="normal" title=" 添加地址" image="icon-add">
+                    <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-4" maxY="0.0"/>
+                    <inset key="imageEdgeInsets" minX="-4" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <state key="normal" title=" 添加地址" image="+">
                         <color key="titleColor" white="1" alpha="0.29987157534246578" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
@@ -51,6 +53,6 @@
         </view>
     </objects>
     <resources>
-        <image name="icon-add" width="16" height="16"/>
+        <image name="+" width="16" height="16"/>
     </resources>
 </document>
