--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawCardCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/View/HYWithdrawCardCell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -30,25 +29,28 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0lk-e7-OXb">
-                                <rect key="frame" x="79" y="24" width="36.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <rect key="frame" x="79" y="24" width="33" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ERC20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1C-MM-ro5">
-                                <rect key="frame" x="124.5" y="30.5" width="38.5" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="1" alpha="0.80316245719178081" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="121" y="26.5" width="44.5" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="****  ****  ****  1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJB-0y-l54">
-                                <rect key="frame" x="79" y="51" width="236" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <rect key="frame" x="79" y="46.5" width="236" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="0.80316245719178081" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="选中" translatesAutoresizingMaskIntoConstraints="NO" id="hbY-Xh-Klh">
+                                <rect key="frame" x="319" y="10" width="16" height="17"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray4Color"/>
+                        <color key="backgroundColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="B8O-dC-ok1" firstAttribute="centerY" secondItem="yhM-J9-dpm" secondAttribute="centerY" id="BzL-Zi-kJv"/>
                             <constraint firstAttribute="bottom" secondItem="xJB-0y-l54" secondAttribute="bottom" constant="18" id="C1R-O4-QTY"/>
@@ -56,7 +58,9 @@
                             <constraint firstItem="0lk-e7-OXb" firstAttribute="leading" secondItem="B8O-dC-ok1" secondAttribute="trailing" constant="16" id="GH7-5A-OsI"/>
                             <constraint firstAttribute="trailing" secondItem="xJB-0y-l54" secondAttribute="trailing" constant="30" id="Jl7-G8-rUY"/>
                             <constraint firstItem="s1C-MM-ro5" firstAttribute="leading" secondItem="0lk-e7-OXb" secondAttribute="trailing" constant="9" id="Of2-6J-0ID"/>
+                            <constraint firstAttribute="trailing" secondItem="hbY-Xh-Klh" secondAttribute="trailing" constant="10" id="SrU-0y-9y7"/>
                             <constraint firstItem="0lk-e7-OXb" firstAttribute="top" secondItem="yhM-J9-dpm" secondAttribute="top" constant="24" id="WGg-Jt-ouQ"/>
+                            <constraint firstItem="hbY-Xh-Klh" firstAttribute="top" secondItem="yhM-J9-dpm" secondAttribute="top" constant="10" id="d1d-oT-auh"/>
                             <constraint firstItem="B8O-dC-ok1" firstAttribute="leading" secondItem="yhM-J9-dpm" secondAttribute="leading" constant="15" id="eWu-QO-mg3"/>
                             <constraint firstItem="s1C-MM-ro5" firstAttribute="bottom" secondItem="0lk-e7-OXb" secondAttribute="bottom" id="p0G-Li-b1K"/>
                         </constraints>
@@ -76,14 +80,13 @@
                 <outlet property="lblCardAddr" destination="xJB-0y-l54" id="BRc-Se-Pdg"/>
                 <outlet property="lblProtocol" destination="s1C-MM-ro5" id="6H8-6n-cgz"/>
                 <outlet property="lblTitle" destination="0lk-e7-OXb" id="cqk-ER-lTu"/>
+                <outlet property="selectedImageView" destination="hbY-Xh-Klh" id="LSi-zj-rpm"/>
             </connections>
             <point key="canvasLocation" x="321" y="77"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Exchanges-logo-1" width="32" height="32"/>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="选中" width="16" height="17"/>
     </resources>
 </document>
